--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -15,6 +15,14 @@ jobs:
     - name: Set up Docker Buildx
       uses: docker/setup-buildx-action@v1
 
+    - name: Echo environment variables
+      run: |
+        echo "DOCKERHUB_USERNAME: $DOCKERHUB_USERNAME"
+        echo "DOCKERHUB_TOKEN: $DOCKERHUB_TOKEN"
+      env:
+        DOCKERHUB_USERNAME: ${{ secrets.DOCKERHUB_USERNAME }}
+        DOCKERHUB_TOKEN: ${{ secrets.DOCKERHUB_TOKEN }}
+
     - name: Login to DockerHub
       env:
         DOCKERHUB_USERNAME: ${{ secrets.DOCKERHUB_USERNAME }}
@@ -22,7 +30,7 @@ jobs:
       uses: docker/login-action@v3
       with:
         username: ${{ env.DOCKERHUB_USERNAME }}
-        password: ${{ env.DOCKERHUB_TOKEN }}
+        password: ${{ env.DOCKERHUB_TOKEN }}    
 
     - name: Build and push
       uses: docker/build-push-action@v2
